--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>
+      bingas
+    </title>
   </head>
+  <body>
+    <h1>
+      sim
+    </h1>
+  </body>
 </html>
