--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
-  <head>
-    <title>
-      bingas
-    </title>
-  </head>
-  <body>
-    <h1>
-      sim
-    </h1>
-  </body>
+    <head>
+        <title>
+            bingas
+        </title>
+        <link rel="stylesheet" href="bingas.css">
+        <link rel="icon" href="Downloads/bingas.png" type="image/png">
+    </head>
+    <body>
+        <center>
+            <strong>
+                <h1 class="h1">
+                    <br>
+                    holy bingas my friend!11!!!!!
+                    <br>
+                    <br>
+                    iaiaa, lhélhé, lhélhé!
+                    <br>
+                    <br>
+                    kerbal
+                </h1>
+            </strong>
+        </center>
+    </body>
 </html>
